[gd_scene load_steps=3 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://MotivationEnjoyPerc.gd" type="Script" id=2]

[node name="MotivationEnjoyPerc" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 712.0
margin_bottom = 562.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 365.0
margin_bottom = 480.0
rect_min_size = Vector2( 330, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Q6" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 333.0
margin_bottom = 14.0
text = "I thought this activity was quite enjoyable."

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 333.0
margin_bottom = 34.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider6" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 38.0
margin_right = 333.0
margin_bottom = 69.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 5.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="NotatallTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 9.0
margin_right = 67.0
margin_bottom = 31.0
text = "Not at all
true"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 71.0
margin_right = 131.0
margin_bottom = 31.0
rect_min_size = Vector2( 60, 0 )

[node name="SomewhatTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 135.0
margin_right = 201.0
margin_bottom = 31.0
text = "Somewhat
true"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 205.0
margin_right = 280.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )

[node name="VeryTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 284.0
margin_right = 312.0
margin_bottom = 31.0
text = "Very
true"
align = 1

[node name="Q7" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 73.0
margin_right = 333.0
margin_bottom = 104.0
text = "While I was doing this activity, I was thinking about
how much I enjoyed it."

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 108.0
margin_right = 333.0
margin_bottom = 124.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider7" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 128.0
margin_right = 333.0
margin_bottom = 159.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_right = 5.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="NotatallTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 9.0
margin_right = 67.0
margin_bottom = 31.0
text = "Not at all
true"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 71.0
margin_right = 131.0
margin_bottom = 31.0
rect_min_size = Vector2( 60, 0 )

[node name="SomewhatTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 135.0
margin_right = 201.0
margin_bottom = 31.0
text = "Somewhat
true"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 205.0
margin_right = 280.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )

[node name="VeryTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 284.0
margin_right = 312.0
margin_bottom = 31.0
text = "Very
true"
align = 1

[node name="Q8" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 163.0
margin_right = 333.0
margin_bottom = 177.0
text = "I think I am pretty good at this activity."

[node name="HBoxContainer5" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 181.0
margin_right = 333.0
margin_bottom = 197.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider8" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer6" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 201.0
margin_right = 333.0
margin_bottom = 232.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_right = 5.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="NotatallTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 9.0
margin_right = 67.0
margin_bottom = 31.0
text = "Not at all
true"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 71.0
margin_right = 131.0
margin_bottom = 31.0
rect_min_size = Vector2( 60, 0 )

[node name="SomewhatTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 135.0
margin_right = 201.0
margin_bottom = 31.0
text = "Somewhat
true"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 205.0
margin_right = 280.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )

[node name="VeryTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 284.0
margin_right = 312.0
margin_bottom = 31.0
text = "Very
true"
align = 1

[node name="Q9" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 236.0
margin_right = 333.0
margin_bottom = 267.0
text = "I think I did pretty well in this activity, compared to
others."

[node name="HBoxContainer7" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 271.0
margin_right = 333.0
margin_bottom = 287.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider9" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer8" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 291.0
margin_right = 333.0
margin_bottom = 322.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_right = 5.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="NotatallTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 9.0
margin_right = 67.0
margin_bottom = 31.0
text = "Not at all
true"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 71.0
margin_right = 131.0
margin_bottom = 31.0
rect_min_size = Vector2( 60, 0 )

[node name="SomewhatTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 135.0
margin_right = 201.0
margin_bottom = 31.0
text = "Somewhat
true"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 205.0
margin_right = 280.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )

[node name="VeryTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer8"]
margin_left = 284.0
margin_right = 312.0
margin_bottom = 31.0
text = "Very
true"
align = 1

[node name="Q10" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 326.0
margin_right = 333.0
margin_bottom = 357.0
text = "After working at this activity for a while, I felt pretty
competent."

[node name="HBoxContainer9" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 361.0
margin_right = 333.0
margin_bottom = 377.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider10" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
min_value = 1.0
max_value = 7.0
value = 1.0
tick_count = 7
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer9"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer10" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 381.0
margin_right = 333.0
margin_bottom = 412.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_right = 5.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="NotatallTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 9.0
margin_right = 67.0
margin_bottom = 31.0
text = "Not at all
true"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 71.0
margin_right = 131.0
margin_bottom = 31.0
rect_min_size = Vector2( 60, 0 )

[node name="SomewhatTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 135.0
margin_right = 201.0
margin_bottom = 31.0
text = "Somewhat
true"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 205.0
margin_right = 280.0
margin_bottom = 31.0
rect_min_size = Vector2( 75, 0 )

[node name="VeryTrue" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer10"]
margin_left = 284.0
margin_right = 312.0
margin_bottom = 31.0
text = "Very
true"
align = 1

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 416.0
margin_right = 333.0
margin_bottom = 436.0
text = "Next"
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer/HSlider6" to="." method="_on_HSlider6_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer3/HSlider7" to="." method="_on_HSlider7_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer5/HSlider8" to="." method="_on_HSlider8_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer7/HSlider9" to="." method="_on_HSlider9_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer9/HSlider10" to="." method="_on_HSlider10_value_changed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/Button" to="." method="_on_Button_button_up"]
